# Zero-To-Production-In-Rust

./: .env  .env.sample  .gitignore  Cargo.toml  Cranky.toml  Dockerfile  Dockerfile.dev  README.md  configuration.yaml  docker-compose.yml
configuration/: base.yaml  development.yaml  production.yaml
migrations/: 20221214010343_add_status_to_subscriptions.sql  20230104144204_make_status_not_null_in_subscriptions.sql  20230104144312_create_subscription_tokens_table.sql
scripts/: build.sh  clean_database.sh  clean_db.sh  run.dev.sh  run.prod.sh  run.sh  start_database.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  routes.rs  sendgrid_email_format.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health.rs
tests/api/: health.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
