[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
claim = "0.5"
config = "0.13.2"
log = "0.4"
once_cell = "1.16.0"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
scopeguard = "1"
secrecy = { version = "0.8.0", features = ["serde"] }
sendgrid = "0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.6"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0"

[dev-dependencies]

# https://github.com/LukeMathWalker/zero-to-production/issues/34
fake = "2"
quickcheck = "1"
quickcheck_macros = "1"

[package.metadata.commands]
database = "sudo service postgresql restart"
test = "cargo nextest run --failure-output final"
clean = "./scripts/clean_database.sh newsletter"
run = "cargo run | bunyan"
run-prod = "./target/release/zero2prod | bunyan"
build = "cargo build --release --target-dir ../target"
dev = "cargo cmd database && cargo watch -x 'cmd test' -x 'cmd clean' -x 'cmd run'"
prod = "cargo cmd database &&cargo watch -x 'cmd test' -x 'cmd clean' -x 'cmd build && cargo cmd run-prod'"
docker-build = "cargo watch -x 'cmd test' -x 'cmd clean' -s './scripts/build.sh'"
docker-dev = "cargo watch -x 'cmd test' -x 'cmd clean' -s './scripts/run.sh'"
docker-prod = "cargo watch -x 'cmd test' -x 'cmd clean' -s './scripts/run.sh release'"
